--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Krishna Kanth Nakka</title>
+  <title>Vedasri Nakka</title>
 
-  <meta name="author" content="Krishna Kanth Nakka">
+  <meta name="author" content="Vedasri Nakka">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
