--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 
             </td>
           </tr>
+	</tbody>
+      </table>
 <!--
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -414,9 +416,9 @@
 
             </td>
           </tr>
--->
         </tbody>
       </table>
+-->
 
         
 
