--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Krishna Kanth Nakka</name>
+                <name>Vedasri Nakka</name>
               </p>
               <p>
 
@@ -56,11 +56,11 @@
             
               </p>
               <p style="text-align:center">
-                <a href="mailto:krishkanth.92@gmail.com">Email</a> &nbsp/&nbsp
+                <a href="mailto:vedasri.g555@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/Resume_KrishnaKanthNakka.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=g_21RKoAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://github.com/krishnakanthnakka/">Github</a>&nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/krishna-kanth-nakka-b73a4b44/">LinkedIn</a>&nbsp/&nbsp
+                <a href="https://github.com/VedasriNakka">Github</a>&nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/vedasri-nakka-8a7865b3/">LinkedIn</a>&nbsp/&nbsp
                 <a href="data/Thesis_final_compressed.pdf">Thesis</a> &nbsp/&nbsp
                 <a href="data/Public_Defense_pdf_1.pdf">Thesis Slides</a>
 
