--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <a href="https://scholar.google.com/citations?user=g_21RKoAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/VedasriNakka">Github</a>&nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/vedasri-nakka-8a7865b3/">LinkedIn</a>&nbsp/&nbsp
-                <a href="data/Thesis_final_compressed.pdf">Thesis</a> &nbsp/&nbsp
-                <a href="data/Public_Defense_pdf_1.pdf">Thesis Slides</a>
+                <a href="data/Contrastive_Learning_for_Character_Detection_in_Ancient_Greek_Papyri_v3.pdf">Thesis</a> &nbsp/&nbsp
+                <a href="data/Thesis_final_v2.pdf">Thesis Slides</a>
 
 
               </p>
