--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <p style="text-align:center">
                 <a href="mailto:vedasri.g555@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/Resume_KrishnaKanthNakka.pdf">CV</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=g_21RKoAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
+              <!--  <a href="https://scholar.google.com/citations?user=g_21RKoAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp -->
                 <a href="https://github.com/VedasriNakka">Github</a>&nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/vedasri-nakka-8a7865b3/">LinkedIn</a>&nbsp/&nbsp
                 <a href="data/Contrastive_Learning_for_Character_Detection_in_Ancient_Greek_Papyri_v3.pdf">Thesis</a> &nbsp/&nbsp
@@ -68,7 +68,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/bio3.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/bio3.jpg" class="hoverZoomLink"></a>
+              <a href="images/bio3.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/veda_imp.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
