--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/bio3.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/veda_imp.jpg" class="hoverZoomLink"></a>
+              <a href="images/veda_image.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/veda_image.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
