--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <papertitle>  A unified framework for keypoint-based multi-person pose detection, tracking and re-identification for team sport analysis </papertitle>
               </a>
                <br>
-              <strong>Krishna Kanth Nakka</strong>
+              <strong>Vedasri Nakka</strong>
               <p>Innosuisse VITA-Dartfish, <a href="https://www.epfl.ch/research/domains/transportation-center/research-overview/others/team-sports-analysis-via-image-based-tracking/">Sep 2022 - April 2023 </a> </p>
               <br>
               <p>The objective of this project is to enhance sports player tracking through a unified framework. This involves detecting and tracking semantic keypoints and utilizing re-identification techniques to enhance long-term tracking, especially when players go out of view.</p>
