--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
               <p>
 
 
+I finished my Masters in Computer Science in September 2024 from Swiss Joint Master of Science in Computer Science. Which includes three universities that are University of Bern, University of Neuchatel, University of Fribourg.
 
+I have done my masters on topic Contrastive Learning for Character Detection in Ancient Greek Papyri, under the supervision of  <a href="https://icosys.ch/andreas-fischer">Prof. Andreas Fischer</a> and <a href="https://www.unifr.ch/uni/de/organisation/leitung/duplicate-of-riold2/duplicate-of-duplicate-of-prof.-rolf-ingold.html">Prof. Rold Ingold</a>
+and <a href="https://scholar.google.ch/citations?user=97uiYAoAAAAJ&hl=de">Lars Vogtlin</a>
+
+<!--
                 I graduated with a PhD in Computer Science in August 2022 from the Computer Vision Lab at EPFL.
    I was supervised by <a href="https://people.epfl.ch/cgi-bin/people?id=119864&op=bio&lang=en&cvlang=en">Dr. Mathieu Salzmann</a> and <a href="https://people.epfl.ch/pascal.fua/bio?lang=en">Prof. Pascal Fua</a> in the areas of computer vision and deep learning.</p>
 
@@ -49,6 +54,8 @@
 
  <p>I'm currently working in the Privacy Team, Trustworthy Technology Lab at Huawei Munich Research Center focusing on the privacy of Large Language Models and Auto ML techniques for Differentially Private Federated Learning algorithms.</p>
 
+-->
+		      
 </p>
 
             </p>
