--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
               </p>
               <p>
 
+<p>I finished my Master’s in Computer Science in September 2024 through the Swiss Joint Master of Science in Computer Science program (University of Bern, University of Neuchatel, University of Fribourg) with a grade of 5/6.</p>
 
-I finished my Masters in Computer Science in September 2024 from Swiss Joint Master of Science in Computer Science. Which includes three universities that are University of Bern, University of Neuchatel, University of Fribourg.
+<p>My thesis focused on <strong>Contrastive Learning for Character Detection in Ancient Greek Papyri</strong>, under the supervision of <a href="https://icosys.ch/andreas-fischer">Prof. Andreas Fischer</a>, <a href="https://www.unifr.ch/uni/de/organisation/leitung/duplicate-of-riold2/duplicate-of-duplicate-of-prof.-rolf-ingold.html">Prof. Rolf Ingold</a>, and <a href="https://scholar.google.ch/citations?user=97uiYAoAAAAJ&hl=de">Lars Vogtlin</a>.</p>
 
-I have done my masters on topic Contrastive Learning for Character Detection in Ancient Greek Papyri, under the supervision of  <a href="https://icosys.ch/andreas-fischer">Prof. Andreas Fischer</a> and <a href="https://www.unifr.ch/uni/de/organisation/leitung/duplicate-of-riold2/duplicate-of-duplicate-of-prof.-rolf-ingold.html">Prof. Rold Ingold</a>
-and <a href="https://scholar.google.ch/citations?user=97uiYAoAAAAJ&hl=de">Lars Vogtlin</a>
+<p>Prior to this, I earned my Bachelor’s degree in Electronic Communication Engineering from<a href="https://bvrit.ac.in/"> B.V. Raju Institute of Technology</a> with 73% in 2016. I then spent three years at <a href="https://www.cyient.com/">Cyient</a> in Hyderabad, working on <strong>ServiceNow</strong> technology, gaining experience in administration, development, and IoT, including modules like client scripts, server-side scripts, workflows, and ITSM processes such as incident, problem, and change management.</p>
+
+<p>Currently, I am seeking roles in <strong>Machine Learning, AI, and LLMs</strong>. I have completed various projects in <strong>Computer Vision</strong> and <strong>Machine Learning</strong> and am prepared for roles in these areas.</p>
+
 
 <!--
                 I graduated with a PhD in Computer Science in August 2022 from the Computer Vision Lab at EPFL.
