--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <p>My thesis focused on Contrastive Learning for Character Detection in Ancient Greek Papyri, under the supervision of <a href="https://icosys.ch/andreas-fischer">Prof. Andreas Fischer</a>, <a href="https://www.unifr.ch/uni/de/organisation/leitung/duplicate-of-riold2/duplicate-of-duplicate-of-prof.-rolf-ingold.html">Prof. Rolf Ingold</a>, and <a href="https://scholar.google.ch/citations?user=97uiYAoAAAAJ&hl=de">Lars Vogtlin</a>.</p>
 
-<p>Prior to this, I earned my Bachelor’s degree in Electronic Communication Engineering from<a href="https://bvrit.ac.in/"> B.V. Raju Institute of Technology</a> with 73% in 2016. I then spent three years at <a href="https://www.cyient.com/">Cyient</a> in Hyderabad, working on ServiceNow technology, gaining experience in administration, development, and IoT, including modules like client scripts, server-side scripts, workflows, and ITSM processes such as incident, problem, and change management.</p>
+<p>Prior to this, I earned my Bachelor’s degree in Electronic Communication Engineering from<a href="https://bvrit.ac.in/"> B.V. Raju Institute of Technology</a> with 73% marks in 2016. I then spent three years at <a href="https://www.cyient.com/">Cyient</a> in Hyderabad, working on ServiceNow technology, gaining experience in administration, development, and IoT, including modules like client scripts, server-side scripts, workflows, and ITSM processes such as incident, problem, and change management.</p>
 
 <p>Currently, I am seeking roles in Machine Learning, AI, and LLMs. I have completed various projects in Computer Vision and Machine Learning and am prepared for roles in these areas.</p>
 
