--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </p>
               <p>
 
-<p>I finished my Master’s in Computer Science in September 2024 through the Swiss Joint Master of Science in Computer Science program (University of Bern, University of Neuchatel, University of Fribourg) with a grade of 5/6.</p>
+<p>I finished my Master’s in Computer Science in September 2024 through the Swiss Joint Master of Science in Computer Science program (University of Bern, University of Neuchatel, University of Fribourg) with a grade of 5/6 and specialization in Data Science.</p>
 
 <p>My thesis focused on Contrastive Learning for Character Detection in Ancient Greek Papyri, under the supervision of <a href="https://icosys.ch/andreas-fischer">Prof. Andreas Fischer</a>, <a href="https://www.unifr.ch/uni/de/organisation/leitung/duplicate-of-riold2/duplicate-of-duplicate-of-prof.-rolf-ingold.html">Prof. Rolf Ingold</a>, and <a href="https://scholar.google.ch/citations?user=97uiYAoAAAAJ&hl=de">Lars Vogtlin</a>.</p>
 
@@ -85,14 +85,21 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Research</heading>
-              <p>
+              <heading>Projects</heading>
+<p>During my master’s, my main focus was on data science-related courses and projects. I gained a strong understanding of core machine learning concepts and algorithms, particularly through the <strong>Pattern Recognition</strong> course, where I learned about KNN, clustering, Bayesian classification, support vector machines, and artificial neural networks. To deepen my knowledge, I also took courses such as <strong>Machine Learning</strong>, <strong>Digital Humanities</strong>, and <strong>Statistical Learning</strong>, where we explored ML topics in detail.</p>
+
+<p>Additionally, I read papers on machine learning during seminars and wrote scientific articles. One of the papers I co-authored in the <strong>Seminar Public Services</strong> course was published in the <em>Informatik Spektrum Journal</em>.</p>
+
+<p>In the <strong>Fuzzy System</strong> course, I completed a project that utilized fuzzy logic technology to recommend personalized travel destinations by analyzing user responses. I also studied <strong>Recommendation Systems</strong>, which helped me understand how recommendation engines on websites and social media platforms function. Besides these, I took additional courses that were not directly related to ML.</p>
+
+	
+<!--	
 <p>My overarching goal is to develop machine learning models that are both robust and privacy-aware, in the domains of safety and security-critical applications. In my current research, I concentrate on enhancing privacy aspects within Large Language Models (LLMs) and within the context of Federated Learning. Additionally, I explore AutoML techniques to optimize hyperparameters in the Federated Learning setting.</p>
 
 <p>During my doctoral studies, my primary focus was on comprehending the limitations of deep neural networks concerning out-of-distribution and adversarial scenarios, with the aim of improving robustness against adversarial domain shifts. My research encompassed areas such as interpretable models, transfer-based black-box attacks, attack detection, adversarial defenses, anomaly detection, and the evaluation of disentangled representations. While at VITA, my research delved into various projects related to human-pose estimation, tracking, and re-identification, with a particular application in the field of team sports analytics.</p>
 
 <p>I am enthusiastic about collaborating with motivated students and researchers who share an interest in Adversarial Machine Learning. If my research background aligns with your interests, please feel free to reach out to me via email.</p>
-
+-->
             </td>
           </tr>
         </tbody></table>
