--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/vita.jpg" alt="teaser" width="240" height="200">
+              <img src="images/simclr_methos_image_v2.png" alt="teaser" width="240" height="200">
             </td>
             <td width="75%" valign="middle">
               <papertitle>  A unified framework for keypoint-based multi-person pose detection, tracking and re-identification for team sport analysis </papertitle>
