--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Projects</heading>
-<p>During my master’s, my main focus was on data science-related courses and projects. I gained a strong understanding of core machine learning concepts and algorithms, particularly through the <strong>Pattern Recognition</strong> course, where I learned about KNN, clustering, Bayesian classification, support vector machines, and artificial neural networks. To deepen my knowledge, I also took courses such as <strong>Machine Learning</strong>, <strong>Digital Humanities</strong>, and <strong>Statistical Learning</strong>, where we explored ML topics in detail.</p>
+<p>During my master’s, my main focus was on data science-related courses and projects. I gained a strong understanding of core machine learning concepts and algorithms, particularly through the Pattern Recognition course, where I learned about KNN, clustering, Bayesian classification, support vector machines, and artificial neural networks. To deepen my knowledge, I also took courses such as Machine Learning, Digital Humanities, and Statistical Learning, where we explored ML topics in detail.</p>
 
-<p>Additionally, I read papers on machine learning during seminars and wrote scientific articles. One of the papers I co-authored in the <strong>Seminar Public Services</strong> course was published in the <em>Informatik Spektrum Journal</em>.</p>
+<p>Additionally, I read papers on machine learning during seminars and wrote scientific articles. One of the papers I co-authored in the Seminar Public Services course was published in the <em>Informatik Spektrum Journal</em>.</p>
 
-<p>In the <strong>Fuzzy System</strong> course, I completed a project that utilized fuzzy logic technology to recommend personalized travel destinations by analyzing user responses. I also studied <strong>Recommendation Systems</strong>, which helped me understand how recommendation engines on websites and social media platforms function. Besides these, I took additional courses that were not directly related to ML.</p>
+<p>In the Fuzzy System course, I completed a project that utilized fuzzy logic technology to recommend personalized travel destinations by analyzing user responses. I also studied Recommendation Systems, which helped me understand how recommendation engines on websites and social media platforms function. Besides these, I took additional courses that were not directly related to ML.</p>
 
 	
 <!--	
@@ -108,16 +108,17 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/simclr_methos_image_v2.png" alt="teaser" width="240" height="200">
+              <img src="images/simclr_method_image_v2.png" alt="teaser" width="240" height="200">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>  A unified framework for keypoint-based multi-person pose detection, tracking and re-identification for team sport analysis </papertitle>
+              <papertitle>  Contrastive Learning for Character Detection in Ancient Greek Papyri </papertitle>
               </a>
                <br>
               <strong>Vedasri Nakka</strong>
-              <p>Innosuisse VITA-Dartfish, <a href="https://www.epfl.ch/research/domains/transportation-center/research-overview/others/team-sports-analysis-via-image-based-tracking/">Sep 2022 - April 2023 </a> </p>
+              <p>University of Fribourg, <a href="https://www.unifr.ch/home/en/">Feb 2024 - September 2024 </a> </p> 
               <br>
-              <p>The objective of this project is to enhance sports player tracking through a unified framework. This involves detecting and tracking semantic keypoints and utilizing re-identification techniques to enhance long-term tracking, especially when players go out of view.</p>
+              <p>The main objective of this project is to evaluate the effectiveness of SimCLR, a contrastive learning technique, in recognizing Greek letters and compare its performance against traditional supervised models using cross-entropy and triplet loss functions. By pretraining SimCLR on a large dataset and fine-tuning on a smaller dataset, the study aims to assess the impact of different data augmentation strategies on SimCLR’s performance. Additionally, the project explores why traditional supervised learning models outperform SimCLR in this specific letter recognition task.
+	      Thesis work is available at: http://arxiv.org/abs/2409.10156 and code: https://github.com/VedasriNakka/MS_project/tree/main</p>
 
             </td>
           </tr>
