--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
               <strong>Vedasri Nakka</strong>
               <p>University of Fribourg, <a href="https://www.unifr.ch/home/en/">Feb 2024 - September 2024 </a> </p> 
               <br>
-              <p>The main objective of this project is to evaluate the effectiveness of SimCLR, a contrastive learning technique, in recognizing Greek letters and compare its performance against traditional supervised models using cross-entropy and triplet loss functions. By pretraining SimCLR on a large dataset and fine-tuning on a smaller dataset, the study aims to assess the impact of different data augmentation strategies on SimCLR’s performance. Additionally, the project explores why traditional supervised learning models outperform SimCLR in this specific letter recognition task.
-	      Thesis work is available at: http://arxiv.org/abs/2409.10156 and code: https://github.com/VedasriNakka/MS_project/tree/main</p>
+              <p>The main objective of this project is to evaluate the effectiveness of SimCLR, a contrastive learning technique, in recognizing Greek letters and compare its performance against traditional supervised models using cross-entropy and triplet loss functions. By pretraining SimCLR on a large dataset and fine-tuning on a smaller dataset, the study aims to assess the impact of different data augmentation strategies on SimCLR’s performance. Additionally, the project explores why traditional supervised learning models outperform SimCLR in this specific letter recognition task My <a href="http://arxiv.org/abs/2409.10156">Thesis work </a> and <a href="https://github.com/VedasriNakka/MS_project/tree/main"> code. </a> </p>
 
             </td>
           </tr>
