--- a/index.html
+++ b/index.html
@@ -123,6 +123,30 @@
           </tr>
 	</tbody>
       </table>
+
+
+
+	
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <tbody>
+    <tr>
+      <td style="padding:20px;width:100%;vertical-align:middle">
+        <heading>Scholarships</heading>
+        <p>I'm deeply grateful for the generous scholarships I received throughout my academic journey. Some of these scholarships include:</p>
+        <ul>
+
+          <li><a href="https://www.mitacs.ca/en/programs/globalink/globalink-research-internship">MITACS Summer Research Scholarship</a> to conduct research at the University of Alberta</li>
+        <li><a href="https://science.uq.edu.au/student-support/scholarships/undergraduate-scholarships/uq-summer-research-program">University of Queensland Summer Research Scholarship</a> to support the internship at <a href="https://cai.centre.uq.edu.au/">Center for Advanced Imaging Institute</a></li>
+        <li><a href="https://www.epfl.ch/education/phd/edic-computer-and-communication-sciences/edic-for-phd-students/">EDIC PhD Fellowship</a> for pursuing the first year of doctoral studies at EPFL</li>
+        </ul>
+
+
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+	
 <!--
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -437,7 +461,8 @@
       </table>
 -->
 
-        
+
+<!--      
 
 	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
   <tbody>
@@ -519,7 +544,7 @@
       </table>
 
 
-
+-->
   
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
