--- a/index.html
+++ b/index.html
@@ -126,19 +126,24 @@
 
 
 
+
 	
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
   <tbody>
     <tr>
       <td style="padding:20px;width:100%;vertical-align:middle">
         <heading>Scholarships</heading>
-        <p>I'm deeply grateful for the generous scholarships I received throughout my academic journey. Some of these scholarships include:</p>
-        <ul>
+        <papertitle>A life engineering perspective on algorithms, AI, social media, and quantitative metrics</papertitle>
+	<p>Georgiana Bigea,Nakka Vedasri, Edy Portmann, Jennifer Swaminathan, Maria Mumtaz</p>
+	<p><a href="https://www.springerprofessional.de/informatik-spektrum/5053144"> Informatik Spektrum</a>, Accepted: 2 May 2024 </p>
+        <be>
+	<p>This academic paper explores the intersection of life engineering, algorithms, AI, social media, and their impact on human life, through reviews of three influential books. 
+		Cathy O'Neil's "Weapons of Math Destruction" reveals how algorithms can reinforce biases and discrimination, calling for ethical oversight in automated systems. 
+		Kate Crawford's "Atlas of AI" expands on AI's broader effects, including labor exploitation and environmental damage, urging responsible AI development. 
+		Shoshana Zuboff's "The Age of Surveillance Capitalism" critiques how tech giants monetize personal data, eroding privacy and challenging democracy. 
+		This <a href="https://link.springer.com/article/10.1007/s00287-024-01569-9"> paper </a> emphasizes the need for ethical technology that balances innovation with societal well-being. </p>
 
-          <li><a href="https://www.mitacs.ca/en/programs/globalink/globalink-research-internship">MITACS Summer Research Scholarship</a> to conduct research at the University of Alberta</li>
-        <li><a href="https://science.uq.edu.au/student-support/scholarships/undergraduate-scholarships/uq-summer-research-program">University of Queensland Summer Research Scholarship</a> to support the internship at <a href="https://cai.centre.uq.edu.au/">Center for Advanced Imaging Institute</a></li>
-        <li><a href="https://www.epfl.ch/education/phd/edic-computer-and-communication-sciences/edic-for-phd-students/">EDIC PhD Fellowship</a> for pursuing the first year of doctoral studies at EPFL</li>
-        </ul>
+
 
 
       </td>
@@ -148,6 +153,12 @@
 
 	
 <!--
+<li><a href="https://www.mitacs.ca/en/programs/globalink/globalink-research-internship">MITACS Summer Research Scholarship</a> to conduct research at the University of Alberta</li>
+<li><a href="https://science.uq.edu.au/student-support/scholarships/undergraduate-scholarships/uq-summer-research-program">University of Queensland Summer Research Scholarship</a> to support the internship at <a href="https://cai.centre.uq.edu.au/">Center for Advanced Imaging Institute</a></li>
+<li><a href="https://www.epfl.ch/education/phd/edic-computer-and-communication-sciences/edic-for-phd-students/">EDIC PhD Fellowship</a> for pursuing the first year of doctoral studies at EPFL</li>
+</ul>
+
+	
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/disentanglement.jpg" alt="teaser" width="240" height="200">
