--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <tbody>
     <tr>
       <td style="padding:20px;width:100%;vertical-align:middle">
-        <heading>Scholarships</heading>
+        <heading>Papers</heading>
 </br>
         <papertitle>A life engineering perspective on algorithms, AI, social media, and quantitative metrics</papertitle>
 	<p>Georgiana Bigea,Nakka Vedasri, Edy Portmann, Jennifer Swaminathan, Maria Mumtaz</p>
