--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <heading>Papers</heading>
 </br></br>
         <papertitle>A life engineering perspective on algorithms, AI, social media, and quantitative metrics</papertitle>
-	<p>Georgiana Bigea,Nakka Vedasri, Edy Portmann, Jennifer Swaminathan, Maria Mumtaz</p>
+	<p>Georgiana Bigea, Nakka Vedasri, Edy Portmann, Jennifer Swaminathan, Maria Mumtaz</p>
 	<p><a href="https://www.springerprofessional.de/informatik-spektrum/5053144"> Informatik Spektrum</a>, Accepted: 2 May 2024 </p>
         
 	<p>This academic paper explores the intersection of life engineering, algorithms, AI, social media, and their impact on human life, through reviews of three influential books. 
@@ -148,6 +148,28 @@
   </tbody>
 </table>
 
+
+
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <tbody>
+    <tr>
+      <td style="padding:20px;width:100%;vertical-align:middle">
+        <heading>Working Experience</heading>
+        <p>I have three years of working experience as a ServiceNow Developer in Cyient company.</p>
+        <ul>
+          <li>Proficient in integrating ServiceNow with other platforms, including ServiceNow to ServiceNow and ServiceNow to third-party tools.</li>
+          <li>Worked extensively with modules such as update sets, notifications, web services, business rules, client scripts, reports, and script includes.</li>
+          <li>Hands-on experience with ITSM processes like incident management, change management, and problem management.</li>
+          <li>Collaborated with teams to implement workflows and automate processes using ServiceNow's Flow Designer and Workflow Editor.</li>
+        </ul>
+
+
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+	
 	
 <!--
 <li><a href="https://www.mitacs.ca/en/programs/globalink/globalink-research-internship">MITACS Summer Research Scholarship</a> to conduct research at the University of Alberta</li>
