--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p>Prior to this, I earned my Bachelor’s degree in Electronic Communication Engineering from<a href="https://bvrit.ac.in/"> B.V. Raju Institute of Technology</a> with 73% marks in 2016. I then spent three years at <a href="https://www.cyient.com/">Cyient</a> in Hyderabad, working on ServiceNow technology, gaining experience in administration, development, and IoT, including modules like client scripts, server-side scripts, workflows, and ITSM processes such as incident, problem, and change management.</p>
 
-<p>Currently, I am seeking roles in Machine Learning, AI, and LLMs. I have completed various projects in Computer Vision and Machine Learning and am prepared for roles in these areas.</p>
+<p>Currently, I am seeking roles in Machine Learning, AI, and LLMs. I have completed various projects in Computer Vision and Machine Learning during my Masters </p> <!-- and am prepared for roles in these areas. -->
 
 
 <!--
@@ -90,16 +90,9 @@
 
 <p>Additionally, I read papers on machine learning during seminars and wrote scientific articles. One of the papers I co-authored in the Seminar Public Services course was published in the <em>Informatik Spektrum Journal</em>.</p>
 
-<p>In the Fuzzy System course, I completed a project that utilized fuzzy logic technology to recommend personalized travel destinations by analyzing user responses. I also studied Recommendation Systems, which helped me understand how recommendation engines on websites and social media platforms function. Besides these, I took additional courses that were not directly related to ML.</p>
+<p>In the Fuzzy System course, I completed a project that utilized fuzzy logic technology to recommend personalized travel destinations by analyzing user responses. I also studied Recommendation Systems, which helped me understand how recommendation engines on websites and social media platforms function. </p> <!-- Besides these, I took additional courses that were not directly related to ML. -->
 
 	
-<!--	
-<p>My overarching goal is to develop machine learning models that are both robust and privacy-aware, in the domains of safety and security-critical applications. In my current research, I concentrate on enhancing privacy aspects within Large Language Models (LLMs) and within the context of Federated Learning. Additionally, I explore AutoML techniques to optimize hyperparameters in the Federated Learning setting.</p>
-
-<p>During my doctoral studies, my primary focus was on comprehending the limitations of deep neural networks concerning out-of-distribution and adversarial scenarios, with the aim of improving robustness against adversarial domain shifts. My research encompassed areas such as interpretable models, transfer-based black-box attacks, attack detection, adversarial defenses, anomaly detection, and the evaluation of disentangled representations. While at VITA, my research delved into various projects related to human-pose estimation, tracking, and re-identification, with a particular application in the field of team sports analytics.</p>
-
-<p>I am enthusiastic about collaborating with motivated students and researchers who share an interest in Adversarial Machine Learning. If my research background aligns with your interests, please feel free to reach out to me via email.</p>
--->
             </td>
           </tr>
         </tbody></table>
@@ -168,9 +161,43 @@
     </tr>
   </tbody>
 </table>
+  
 
-	
-	
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:10px">
+              <br>
+              <p style="text-align:right;font-size:small;">
+                Credits: Webpage template from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a>.
+              </p>
+            </td>
+          </tr>
+        </tbody></table>
+
+
+      </td>
+    </tr>
+  </table>
+
+
+</body>
+</html>
+
+
+
+
+<!--	
+<p>My overarching goal is to develop machine learning models that are both robust and privacy-aware, in the domains of safety and security-critical applications. In my current research, I concentrate on enhancing privacy aspects within Large Language Models (LLMs) and within the context of Federated Learning. Additionally, I explore AutoML techniques to optimize hyperparameters in the Federated Learning setting.</p>
+
+<p>During my doctoral studies, my primary focus was on comprehending the limitations of deep neural networks concerning out-of-distribution and adversarial scenarios, with the aim of improving robustness against adversarial domain shifts. My research encompassed areas such as interpretable models, transfer-based black-box attacks, attack detection, adversarial defenses, anomaly detection, and the evaluation of disentangled representations. While at VITA, my research delved into various projects related to human-pose estimation, tracking, and re-identification, with a particular application in the field of team sports analytics.</p>
+
+<p>I am enthusiastic about collaborating with motivated students and researchers who share an interest in Adversarial Machine Learning. If my research background aligns with your interests, please feel free to reach out to me via email.</p>
+-->
+
+
+
+
+
 <!--
 <li><a href="https://www.mitacs.ca/en/programs/globalink/globalink-research-internship">MITACS Summer Research Scholarship</a> to conduct research at the University of Alberta</li>
 <li><a href="https://science.uq.edu.au/student-support/scholarships/undergraduate-scholarships/uq-summer-research-program">University of Queensland Summer Research Scholarship</a> to support the internship at <a href="https://cai.centre.uq.edu.au/">Center for Advanced Imaging Institute</a></li>
@@ -575,28 +602,3 @@
 
 
 -->
-  
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-            <td style="padding:10px">
-              <br>
-              <p style="text-align:right;font-size:small;">
-                Credits: Webpage template from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a>.
-              </p>
-            </td>
-          </tr>
-        </tbody></table>
-
-
-      </td>
-    </tr>
-  </table>
-
-
-
-
-
-
-</body>
-</html>
